--- a/views/EditProfilePage.ejs
+++ b/views/EditProfilePage.ejs
@@ -12,20 +12,16 @@
                         <div class="col-md-12"><label class="labels">رقم الهاتف  :  </label><input style="width:12vw" class="p-3" name = "phone" type="text"  placeholder="أدخل رقم هاتفك " value=""><br><br></div>
                         <div class="col-md-12"><label class="labels">الموقع الالكتروني  :  </label><input class="p-3" style="width:12vw" name = "website" type="text" placeholder="أدخل الموقع الالكتروني" value=""><br><br></div>
                         <div class="col-md-12"><label class="labels">الموقع  :  </label><input style="width:12vw" class="p-3" name = "location" type="text" placeholder="أدخل موقعك" value=""></div><br><br><br><br>
+                        <div class="col-md-12"><div class="profile-img">
+                            <div class="file btn btn-lg btn-primary">
+                                تعديل الصورة  
+                            <input type="file" name="image"/>
+                            </div>
+                        </div></div>
+                       
                         <div class="mt-2 "><button style="margin-right:0" class="btn btn-primary profile-button" type="submit">حفظ التعديلات</button></div>
                     </div>
                 </div>   
-
-                <div class=""style="margin-top:15vh;width:10vw;margin-left:5vw;">
-                    <div class="profile-img">
-                        <div class="file btn btn-lg btn-primary">
-                            تعديل الصورة  
-                        <input type="file" name="image"/>
-                        </div>
-                    </div>
-            
-                </div>
-            <br>
         </form>
         <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
             <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
