--- a/views/reservations.ejs
+++ b/views/reservations.ejs
@@ -20,7 +20,7 @@
                                     <label> تاريخ الحجز: <%= item.date %></label><br>
                                     <label>الكمية: <%= item.quantity %></label><br>
     
-                                    <button class='fas' style='font-size:35px;color:#ffa200;' type="submit">&#xf2bb;</button><br>
+                                    <button class='fa-solid fa-trash-can' style='font-size:35px;color:#ffa200;' type="submit"></button><br>
                                 </form> 
                             </div>
                         <% 
