--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <%- include("./partials/mainheader") %>
 
     <section class="home top" id="home"style="background-color:#fff;">
-        <div class="container"style="background-color:#fff; width:100vw;">
+        <div class="container"style="background-color:#fff; width:100vw;border: none ;">
             <div class="div1">
                 <h5>مرحبا بكم في موقعنا</h5>
                 <h6>لقمة عيش</h6>
