Add icons title

--- a/views/partials/header1.ejs
+++ b/views/partials/header1.ejs
@@ -1,16 +1,16 @@
 <header>
     <div id="menu-bar" class="fas fa-bars"></div>
-    <a style="text-decoration: none;" href="/charity" class="logo"><span>لـ</span>قمة عيش</a>
+    <a style="text-decoration: none;" href="/charity" class="logo" title="الرئيسية"><span>لـ</span>قمة عيش</a>
     <nav class="navbar">
-        <a style="text-decoration: none;" href="/charity">المطاعم</a>
+        <a style="text-decoration: none;" href="/charity">الرئيسية</a>
         <a style="text-decoration: none;" href="/changePassword">تغيير كلمة المرور</a>
         <a style="text-decoration: none;" href="/DeleteAcount">الغاء العضوية</a>
         <a style="text-decoration: none;" href="/charityReservations">الحجوزات</a>
     </nav>
     <div class="dropdown">
         <div class="icons">
-            <a style="text-decoration: none;" href="/logout" class="fas fa-sign-out-alt"></a>
-            <a href = "/user" class="fas fa-user" id="login-btn"></a>
+            <a style="text-decoration: none;" href="/logout" class="fas fa-sign-out-alt" title="تسجيل الخروج"></a>
+            <a href = "/user" class="fas fa-user" id="login-btn" title="الملف الشخصي"></a>
         </div> 
     </div>
 
